--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "neo4j-driver": "^4.4.1",
     "pug": "2.0.0-beta11"
   }
 }
