--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "neo4j-driver": "^4.4.1",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   }
 }
