menambahkan route baru pada api

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 USER = neo4j
-URI = neo4j+s://ce757534.databases.neo4j.io
-PASSWORD = aHjZwRrJlvQiXXMWTvlZbKZu3gtMK9s8ON6G6kJBjpg
+URI = neo4j://localhost:7687
+PASSWORD = 12345
+URL = http://localhost:8000
