--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "neo4j-driver": "^4.4.1",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0",
-    "pug": "2.0.0-beta11"
+    "passport-local": "^1.0.0"
   }
 }
