--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "neo4j-driver": "^4.4.1",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.4.1"
   }
 }
